# otus_cpp_home_work_6

./: CMakeLists.txt
.github/workflows/: main.yml
src/: main.cpp  proxy_array.hpp  proxy_matrix.hpp
